public/css/style.css
/* blue: #66d9ef  rgb(102, 217, 239)
green: #45c468  rgb(69, 196, 104)
pink: #ff79c6  	rgb(255, 121, 198)
purple:  #bd93f9  	rgb(189, 147, 249)
bg: #282a36  	rgb(40, 42, 54) */

body {
  background-color: black;
/* background-image: url('/images/dagger-tile.png');
  background-repeat: repeat;
  background-attachment: fixed; */
  color: #999999;
}

h1 {
  font-size: 8em;
  font-weight: bolder;
  color: white;
  padding: 0;
  text-transform: lowercase;
  margin-left: -10px;
}

h2 {
  color: white;
  font-size: 1.4em;
  font-weight: bold;
  margin-bottom: 8px;
  margin-top: 20px;
  letter-spacing: .5em;
  text-transform: lowercase;
}

h3 {

}

h4{
  margin: 0;
  color: white;
  font-weight: bold;
  letter-spacing: .2em;
  text-transform: lowercase;
  margin-bottom: 20px;
}

.glitch {
  padding: 10px 0px 10px 0;
}

.container {
  background-color: black;
}

.artist-pic {
  -webkit-border-radius: 100%;
  -moz-border-radius: 100%;
  border-radius: 100%;
  /* top | right | bottom | left */
  margin: 20px 0 20px 0;
}

.main-logo {
  /* top | right | bottom | left */
  margin: 10px 0 0 0;
}

form {
  font-size: .95em;
  padding-top: 25px;
  color: #999999;
}

.form-control {
  background-color: #282a36;
  border: 0;
}

.form-control::after {
  background-color: #282a36;
  border: 0;
  color: white;
}

#email:focus {
  color: #000;
  background-color: #66d9ef;
  border-color: #66d9ef;
  font-weight: bold;
  outline: none;
}


#email {
  background-color: #282a36;
  border: 0;
  color: white;
}

.btn {
  background-color: #282a36;
  border: 0;
  color: #999999;;
}

ul{
  margin-bottom: 12px;
  list-style-type: none;
  padding-left: 0;
  letter-spacing: .1em;
}

ul a{
  letter-spacing: .4em;
}

#songkick-logo{
  width: 27px;
}

#main-list-wrapper {
  display: inline-flex;
  width: 100%;
}
#listen-links-div {
  width: 50%;
}

.main-list-link{
  letter-spacing: .6em;
}
.main-list-li {
  color: #bd93f9;
  font-size: .8em;
  letter-spacing: .6em;
  text-transform: lowercase;
  padding-top: 5px;
}
#social-links-div{
  text-align: right;
  width: 50%;
}
#social-links-div > h2{
  margin-right: -15px;
}
#social-links-div > ul{
  margin-right: -12px;
}


footer {
  color: #999999;
  font-size: .85em;
  /* top | right | bottom | left */
  padding: 0 0 40px 0;
}

/* unvisited link */
a:link {
    color: #bd93f9;
    -webkit-transition: all 2s ease;
    -moz-transition: all 2s ease;
    -ms-transition: all 2s ease;
    -o-transition: all 2s ease;
    transition: all 2s ease;
}

/* visited link */
a:visited {
    color: #bd93f9;
}

/* mouse over link */
a:hover {
    text-decoration: none;
    background-color: #66d9ef;
    color: black;
    -webkit-transition: all 0s ease;
    -moz-transition: all 0s ease;
    -ms-transition: all 0s ease;
    -o-transition: all 0s ease;
    transition: all 0s ease;
}

/* selected link */
a:active {
    color: #66d9ef;
    text-decoration: none;
}


/* // Extra small devices (portrait phones, less than 576px)
// No media query for `xs` since this is the default in Bootstrap */

/* // Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {
  h2 {
    font-size: 2.6em;
  }
  .main-list-li{
    font-size: 1.2em;
  }
}

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {

}

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
  #main-list-wrapper{
    display: inline;
  }
  #social-links-div{
    text-align: left;
    margin-right:0;
  }

  h2{
    font-size: 1.6em;
    letter-spacing:.8em;
  }
}

/* // Extra large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {

}

